--- a/.github/workflows/update_cfhost.yml
+++ b/.github/workflows/update_cfhost.yml
@@ -5,7 +5,7 @@ name: cfhost.json Workflow
 # Controls when the workflow will run
 on:
   schedule:
-    - cron: "30 16 * * *"
+    - cron: "0 * * * *"
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
@@ -60,7 +60,7 @@ jobs:
           
       - name: git commit cfhost.json
         run: |          
-          $update_cfhost || exit
+          [ $update_cfhost ] || (echo "nothing update" && exit)
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
           git add cfhost.json
