--- a/.github/workflows/update_cfhost.yml
+++ b/.github/workflows/update_cfhost.yml
@@ -9,8 +9,9 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
-  #paths-ignore: 
-  #  - 'coverage/**'
+  paths-ignore: 
+    - '.gitignore'
+    - 'package-lock.json'
   #  - 'dist/**'
   #pull_request:
   #  branches: [ "main" ]
@@ -70,7 +71,7 @@ jobs:
             git push
           else
             echo "cfhost not update"
-            [ `git diff --name-only ${{ github.event.before }} ${{ github.event.after }}|grep -v '\.github/*'|wc -l` -eq 0 ] \
+            [ `git diff --name-only ${{ github.event.before }} ${{ github.event.after }}|grep -v '\.git*'|wc -l` -eq 0 ] \
               && echo "worker code nothing update" && exit 1
           fi
           
@@ -87,11 +88,18 @@ jobs:
           npm i
           npm run esbuild
           
+      - name: upload dist
+        uses: actions/upload-artifact@v4
+        with:
+          name: cf-worker
+          path: dist
+          
       - name: deploy worker script
         run: |
           [ -s "dist/$ENTRY" ] || echo "$ENTRY not found!" && exit;
-          curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
+          curl -i -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
             -H 'Content-Type: multipart/form-data' \
             --form "worker.js=@dist/$ENTRY;type=application/javascript+module" \
             --form 'metadata={"main_module":"'$ENTRY'"}' \
             --url $CF_SCRIPT_API/$SCRIPT/content
+          echo 'Finished'
