--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -75,9 +75,11 @@ jobs:
             ret=`curl -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" "$CF_KV_API/$key"`
             if [[ "$ret" == *error* ]]; then
               echo $ret
-            elif [ ! -z "$ret" ]; then
+            elif [ ! -z "$ret" ] && [ ! "$ret" = "[]" ]; then
               echo "$ret" |tr -d '["]'|sed -r 's/, ?/\n/g' >> valid_ips.txt
-              [ $key == $PROXYS ] && curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" -d "$ret" "$CF_KV_API/$PROXYS_BAK"
+              if [ $key == $PROXYS ]; then
+                curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" -d "$ret" "$CF_KV_API/$PROXYS_BAK"
+              fi
             fi
           done
           cat valid_ips.txt | sort | uniq > tmp.txt
