--- a/.github/workflows/update_cfhost.yml
+++ b/.github/workflows/update_cfhost.yml
@@ -23,6 +23,7 @@ env:
   CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/${{secrets.CF_NAMESPACE_ID}}/values
   CF_SCRIPT_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/workers/scripts
   CFHOST: cfhost
+  CFHOSTJSON: cfhost.json
   SCRIPT: v2
   ENTRY: _worker.js
 
@@ -53,26 +54,29 @@ jobs:
           if [[ "$ret" == *error* ]]; then
             echo $ret
           elif [ ! -z "$ret" ] && [ ! "$ret" = "[]" ]; then
-            #echo `cat cfhost.json`$ret|sed 's/\]\[/,/' > tmp.json
-            echo `cat cfhost.json`|tr -d '[]'|sed -r 's/, ?/\n/g' > tmp.txt
+            #echo `cat $CFHOSTJSON`$ret|sed 's/\]\[/,/' > tmp.json
+            echo `cat $CFHOSTJSON`|tr -d '[]'|sed -r 's/, ?/\n/g' > tmp.txt
             echo $ret|tr -d '[]'|sed -r 's/, ?/\n/g'             >> tmp.txt
-            echo [$(echo `cat tmp.txt|sort -u`|tr -s ' ' ',')] > cfhost.json
-            echo 'update_cfhost=true' >> $GITHUB_ENV
+            echo [$(echo `cat tmp.txt|sort -u`|tr -s ' ' ',')] > $CFHOSTJSON
+            #echo 'update_cfhost=true' >> $GITHUB_ENV
           fi
           
       - id: s2
         name: git commit cfhost.json
         run: |          
-          if [ $update_cfhost ]; then
+          if git diff; then
             git config user.name "GitHub Actions Bot"
             git config user.email "<>"
-            git add cfhost.json
+            git add $CFHOSTJSON
             git commit -m "updated cfhost"
             git push
           else
             echo "cfhost not update"
-            [ `git diff --name-only ${{ github.event.before }} ${{ github.event.after }}|grep -v '\.git*'|wc -l` -eq 0 ] \
-              && echo "worker code nothing update" && exit 1
+            if git diff --name-only ${{ github.event.before }} ${{ github.event.after }}|grep -v '\.git*' ; then
+              echo "worker code nothing update"
+              gh run cancel ${{ github.run_id }}
+              gh run watch ${{ github.run_id }}
+            fi
           fi
           
       - id: s3
