--- a/.github/workflows/update_cfhost.yml
+++ b/.github/workflows/update_cfhost.yml
@@ -67,7 +67,7 @@ jobs:
             git push
           else
             echo "cfhost not update"
-            git diff --name-only ${{ github.event.before }} ${{ github.event.after }}|grep -v '\.git*'
+            git diff --name-only ${{ github.event.before }} ${{ github.event.after }} 2>&1
             if git diff --name-only ${{ github.event.before }} ${{ github.event.after }}|grep -v '\.git*' ; then
               echo "worker code nothing update"
               gh run cancel ${{ github.run_id }}
