--- a/.github/workflows/update_cfhost.yml
+++ b/.github/workflows/update_cfhost.yml
@@ -58,6 +58,8 @@ jobs:
           
       - id: s2
         name: git commit cfhost.json
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |          
           if git diff|grep $CFHOSTJSON; then
             git config user.name "GitHub Actions Bot"
