--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -26,7 +26,6 @@ on:
         type: boolean
 
 env:
-  onWorkflowChange: ${{inputs.onWorkflowChange}}
   deployPage: ${{inputs.deployPage}}
   CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/${{secrets.CF_NAMESPACE_ID}}/values
   CF_SCRIPT_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/workers/scripts
@@ -119,14 +118,16 @@ jobs:
       - name: deploy worker, page
         run: |
           [ ! -s "dist/$ENTRY" ] && echo "$ENTRY not found!" && exit;
+          echo "deploy worker..." >> $GITHUB_STEP_SUMMARY
           echo "s5 deploy" >> $GITHUB_STEP_SUMMARY
           curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
             -H 'Content-Type: multipart/form-data' \
             --form "worker.js=@dist/$ENTRY;type=application/javascript+module" \
             --form 'metadata={"main_module":"'$ENTRY'"}' \
             --url $CF_SCRIPT_API/$SCRIPT/content | tail -n 4 >> $GITHUB_STEP_SUMMARY
-            
-          [ $deployPage ] && curl -X POST -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
+          [ ! $deployPage ] && exit;
+          echo "deploy page..." >> $GITHUB_STEP_SUMMARY
+          curl -X POST -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
             -H 'Content-Type: multipart/form-data' \
             --form "$ENTRY=@dist/$ENTRY;type=application/javascript" \
             --form 'manifest={}' \
