--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -110,7 +110,7 @@ jobs:
             # cancel when trigger on schedule # [ -z `git diff --name-only $BEFORE $AFTER 2>&1` ]
             # and when now - (updated time of proxys data) >= 7200s
             ret=`curl -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" "$CF_KV_API/$PROXYS_UPDATED"`
-            if [ $EVENT_NAME = schedule ] && [ ! echo "$ret"|grep error ] && [ $((`date +%s` - $ret)) -ge 7200 ]; then
+            if [ $EVENT_NAME = schedule ] && ! echo "$ret"|grep error && [ $((`date +%s` - $ret)) -ge 7200 ]; then
               echo "on schedule, no change no need to deploy" >> $GITHUB_STEP_SUMMARY
               gh run cancel ${{ github.run_id }}
               gh run watch ${{ github.run_id }}
