patch config for page deployment if needed

--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -173,7 +173,7 @@ jobs:
           
       - name: deploy worker, page
         env:
-          CFENV: ${{pageBranch && 'preview' || 'production'}}
+          CFENV: ${{env.pageBranch && 'preview' || 'production'}}
         run: |
           [ ! -s "dist/$ENTRY" ] && echo "$ENTRY not found!" && exit;
           echo "deploy worker.." >> $GITHUB_STEP_SUMMARY
